examples/bad/09-zero-division.mw
print 6 / 0; // dividing by 0
